[package]
name = "speakln"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["tts", "println", "beginner", "speak", "voice"]
authors = ["Robert Walter <robwalter96@gmail.com>"]
description = "println, but the computer talks to you instead"
homepage = "https://github.com/RobWalt/speakln"
repository = "https://github.com/RobWalt/speakln"
documentation = "https://docs.rs/speakln"

[dependencies]
once_cell = "1.16"
tts = "0.24"
